<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:label="@string/music_lib"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/music_lib_description"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/artist"
            style="@style/ListStyle"
            android:background="@color/category_artist"
            android:text="@string/category_artist" />

        <TextView
            android:id="@+id/albums"
            style="@style/ListStyle"
            android:background="@color/category_albums"
            android:text="@string/category_albums" />

        <TextView
            android:id="@+id/playlists"
            style="@style/ListStyle"
            android:background="@color/category_playlists"
            android:text="@string/category_playlists" />

        <Button
            android:id="@+id/online_payment"
            style="@style/ListStyle"
            android:background="@color/category_online_payment"
            android:text="@string/category_online_payment" />

        <Button
            android:id="@+id/now_playing"
            style="@style/ButtonStyle"
            android:layout_marginTop="110dp" />

    </LinearLayout>

</ScrollView>
